welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: not found: value length
    for (j<- 0 to length-1){
                  ^